@@ -1,4 +1,5 @@
 - cpan_testers:
+  o fix failing scriptlets test with rpm < 4.13.0
   o skip tests if we have no supported downloader
 
 Version 8.120 - 21 October 2019
